Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.0.0
-
Component/s: GUI: Painting, GUI: Printing
-
Labels:None
-
Environment:Mac OSX Lion.
-
Commits:b625ff4c7b68505b6d299d688734c9c1d448cb80
Description
Run the examples/richtext/textedit/textedit.app then try to print. The resulting printouts are rendered completely wrong. This is not an issue on Linux, Windows is untested.
If you print to a physical printer, or print and save as PDF via the inbuilt Mac PDF option, i.e. if QPrinter uses NativeFormat and QMacPrintEngine, then all the the glyphs are not spaced correctly and overprinted on each other. Example attached as PrintPdfViaMac.pdf.
If you Export as PDF, i.e. if QPrinter uses PdfFormat and QPdfPrintEngine, then the glyphs are very small and spaced too far apart. Example attached as ExportPdf.pdf.
I'm guessing this is an issue in the paint engine, but it could be in the font handling. I doubt it is in textedit as Linux works fine.
This is probably a blocker for Beta 1.
Attachments
Issue Links
- is required for
-
QTBUG-25381 QPrinter - Qt 5.0 Release Task
-
- Closed
-
- relates to
-
QTBUG-25781 REG: Wrong default dpi used when calcuating point size of font engine in QRawFont on Mac
-
- Closed
-